--- a/ForecastsCollector/ForecastsCollector.csproj
+++ b/ForecastsCollector/ForecastsCollector.csproj
@@ -6,5 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.19.0"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2"/>
+    <PackageReference Include="NLog" Version="5.1.1"/>
   </ItemGroup>
 </Project>
