Add NLog to Mongo

--- a/ForecastsCollector/ForecastsCollector.csproj
+++ b/ForecastsCollector/ForecastsCollector.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="MongoDB.Driver" Version="2.19.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2"/>
     <PackageReference Include="NLog" Version="5.1.1"/>
+    <PackageReference Include="NLog.Mongo" Version="4.6.0.217"/>
   </ItemGroup>
 </Project>
