--- a/ForecastsCollector/ForecastsCollector.csproj
+++ b/ForecastsCollector/ForecastsCollector.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="NLog" Version="5.1.1"/>
     <PackageReference Include="NLog.Mongo" Version="4.6.0.217"/>
   </ItemGroup>
+ <ItemGroup>
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>  
+  </ItemGroup>
 </Project>
