--- a/ForecastsConsumerConsole/ForecastsConsumerConsole.csproj
+++ b/ForecastsConsumerConsole/ForecastsConsumerConsole.csproj
@@ -6,5 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ForecastsRabbitMQProcessor\ForecastsRabbitMQProcessor.csproj" />
+  </ItemGroup>
 
 </Project>
