--- a/ForecastsBlazor/ForecastsBlazor.csproj
+++ b/ForecastsBlazor/ForecastsBlazor.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\ForecastsRabbitMQProcessor\ForecastsRabbitMQProcessor.csproj" />
+    <ProjectReference Include="..\ForecastsCommon\ForecastsCommon.csproj" />
   </ItemGroup>
 
 </Project>
