--- a/ForecastsConsole/ForecastsConsole.csproj
+++ b/ForecastsConsole/ForecastsConsole.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
-    <ProjectReference Include="..\ForecastsCollector\ForecastsCollector.csproj" />
-    <ProjectReference Include="..\ForecastsRabbitMQProcessor\ForecastsRabbitMQProcessor.csproj" />
-    <ProjectReference Include="..\ForecastsCommon\ForecastsCommon.csproj" />
+    <ProjectReference Include="..\ForecastsCollector\ForecastsCollector.csproj"/>
+    <ProjectReference Include="..\ForecastsRabbitMQProcessor\ForecastsRabbitMQProcessor.csproj"/>
+    <ProjectReference Include="..\ForecastsCommon\ForecastsCommon.csproj"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Config.Net" Version="5.1.5"/>
+  </ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
 </Project>
