--- a/ForecastsConsumerConsole/ForecastsConsumerConsole.csproj
+++ b/ForecastsConsumerConsole/ForecastsConsumerConsole.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,7 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ForecastsRabbitMQProcessor\ForecastsRabbitMQProcessor.csproj" />
+    <ProjectReference Include="..\ForecastsRabbitMQProcessor\ForecastsRabbitMQProcessor.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Config.Net" Version="5.1.5"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ForecastsCommon\ForecastsCommon.csproj" />
   </ItemGroup>
 
 </Project>
