Add ini settings to build

--- a/ForecastsConsumerConsole/ForecastsConsumerConsole.csproj
+++ b/ForecastsConsumerConsole/ForecastsConsumerConsole.csproj
@@ -14,5 +14,10 @@
   <ItemGroup>
     <ProjectReference Include="..\ForecastsCommon\ForecastsCommon.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="forecaster.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
 </Project>
