--- a/ForecastsBlazor/ForecastsBlazor.csproj
+++ b/ForecastsBlazor/ForecastsBlazor.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="ChartJs.Blazor" Version="1.1.0"/>
     <PackageReference Include="ChartJs.Blazor.Fork" Version="2.0.2"/>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="forecaster.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
