--- a/ForecastsConsole/ForecastsConsole.csproj
+++ b/ForecastsConsole/ForecastsConsole.csproj
@@ -13,4 +13,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="forecaster.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
