--- a/ForecastsConsumerConsole/forecaster.ini
+++ b/ForecastsConsumerConsole/forecaster.ini
@@ -1,5 +1,5 @@
-mongodb_connection=mongodb://localhost:27017
-rabbitmq_connection=localhost
-api_key=013d6bbddf4e04cf96ac8119635742b5
+mongodb_connection=mongodb://172.17.0.3:27017
+rabbitmq_connection=172.17.0.2
+api_key=
 cities=Antalya Krasnoyarsk Saint-Petersburg Moscow Phuket Sidney Limassol Budapesht London Munhen
 interval=180000
