--- a/ForecastsServiceApp/ForecastsServiceApp.csproj
+++ b/ForecastsServiceApp/ForecastsServiceApp.csproj
@@ -12,6 +12,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>ForecastsServiceApp</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="forecaster.ini">
